--- a/finance/finance/fin/templates/base.html
+++ b/finance/finance/fin/templates/base.html
@@ -7,6 +7,9 @@
     <title>Yahoo Finance Data</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- MAPS -->
+    <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
+
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=News+Cycle:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -42,10 +45,13 @@
             {% block content %}{% endblock %}
         </div>
     {% endblock %}
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+    {% block script %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <!-- <script src="https://unpkg.com/topojson@3"></script> -->
-    {% block script %}{% endblock %}
+    <script src="https://unpkg.com/topojson@3"></script>
+    <script src="{% static "fin/js/map.js" %}"></script>
+    <script src="{% static "fin/js/creds.js" %}"></script>
+    {% endblock %}
   </body>
 </html>
