--- a/finance/finance/fin/templates/base.html
+++ b/finance/finance/fin/templates/base.html
@@ -52,6 +52,8 @@
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="{% static "fin/js/map.js" %}"></script>
     <script src="{% static "fin/js/creds.js" %}"></script>
+    <script src="{% static "fin/js/bar.js" %}"></script>
+    <script src="{% static "fin/js/home.js" %}"></script>
     {% endblock %}
   </body>
 </html>
