--- a/finance/finance/fin/templates/companies.html
+++ b/finance/finance/fin/templates/companies.html
@@ -13,6 +13,14 @@
       <h3>My Google Maps Demo</h3>
       <div id="map"></div>
 
+      <div class="row">
+        <div class="col-12">
+          <h1>Bar Chart</h1>
+          <div id="fin-bar"></div>
+        </div>
+      </div>
+
+
 
     <script src="js/creds.js"></script>
     <script>
