--- a/finance/finance/fin/templates/company.html
+++ b/finance/finance/fin/templates/company.html
@@ -9,6 +9,7 @@
   </div>
 </div>
   <div class="row">
+
   <!-- <p>Details</p> -->
     <ul class="general-data">
         <li class="montserrat">Openning: {{ company.openning }}</li>
@@ -22,6 +23,9 @@
         <li class="montserrat">Lat: {{ company.lat }}</li>
         <li class="montserrat">Long: {{ company.long }}</li>
     </ul>
+    <script>
+    console.log(typeof {{ company.openning }})
+    </script>
 
   </div>
 
