--- a/finance/finance/fin/templates/company.html
+++ b/finance/finance/fin/templates/company.html
@@ -3,14 +3,13 @@
 {% load humanize %}
 {% block content %}
 <div class="header-image">
-  <a class="back-to-list montserrat" href="{% url 'companies_list' %}">back to list</a>
+  <!-- <a class="back-to-list montserrat" href="{% url 'companies_list' %}">back to list</a> -->
   <div class="row">
-    <a id="individual-company-page-header" href="{{ company.website }}" target="_blank"> <h2>{{ company.full_name }} ({{ company }})</h2></a>
+    <a id="individual-company-page-header" href="{{ company.website }}" target="_blank"><h2>{{ company.full_name }} ({{ company }})</h2></a>
   </div>
 </div>
   <div class="row">
-
-  <!-- <p>Details</p> -->
+    <!-- <h3 class="montserrat">Details</h3> -->
     <ul class="general-data">
         <li class="montserrat">Openning: {{ company.openning }}</li>
         <li class="montserrat">Previous Close: {{ company.previous_close }}</li>
@@ -19,7 +18,6 @@
         <li class="montserrat">EPS: {{ company.eps }}</li>
         <li class="montserrat">1 Year Target: {{ company.one_year }}</li>
         <li class="montserrat">Location: {{ company.location }}</li>
-        <!-- <li class="montserrat">Website: {{ company.website }}</li> -->
         <li class="montserrat">Lat: {{ company.lat }}</li>
         <li class="montserrat">Long: {{ company.long }}</li>
     </ul>
