--- a/finance/finance/fin/templates/base.html
+++ b/finance/finance/fin/templates/base.html
@@ -62,6 +62,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/topojson@3"></script>
     <script src="{% static "fin/js/map.js" %}"></script>
+    <script src="{% static "fin/js/map2.js" %}"></script>
     <script src="{% static "fin/js/creds.js" %}"></script>
     <script src="{% static "fin/js/bar.js" %}"></script>
     <script src="{% static "fin/js/home.js" %}"></script>
