--- a/finance/finance/fin/static/fin/css/styles.css
+++ b/finance/finance/fin/static/fin/css/styles.css
@@ -94,3 +94,44 @@ a:visited{
 .chart{
   margin-top: 60px;
 }
+.chart text{
+  font-family: 'Montserrat', sans-serif;
+  /* https://stackoverflow.com/questions/35038534/d3-js-changing-the-color-of-the-bar-depending-on-the-value */
+}
+
+
+
+
+/* TRYING */
+.x.axis path {
+  display: none;
+}
+
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
